[gd_scene load_steps=2 format=3 uid="uid://cmp8kgi4mhe4g"]

[ext_resource type="Script" uid="uid://bkx3lal065176" path="res://scenes/buildingbutton.gd" id="1_7ugi4"]

[node name="Buildingbutton" type="Node2D"]
script = ExtResource("1_7ugi4")

[node name="Button" type="Button" parent="."]
offset_left = 244.0
offset_top = 149.0
offset_right = 444.0
offset_bottom = 229.0

[node name="CostLabel" type="Label" parent="Button"]
layout_mode = 0
offset_left = 38.0
offset_top = 41.0
offset_right = 78.0
offset_bottom = 64.0

[node name="NameLabel" type="Label" parent="Button"]
layout_mode = 0
offset_left = 36.0
offset_top = 8.0
offset_right = 167.0
offset_bottom = 31.0

[node name="OwnedLabel" type="Label" parent="Button"]
layout_mode = 0
offset_left = 131.0
offset_top = 41.0
offset_right = 171.0
offset_bottom = 64.0
